# qTchat

./: .gitignore  CMakeLists.txt  README.md  qTchat.cbp
Network/: connection.cpp  connection.hpp
